Security Principal
- adding a default security principal to all requires (albeit ignored)
- enabling the secuirty to be bypass when not set as before
- removing the old keyauth middleware
- ensuring the /healthz is immune from the requirement for auth
