# swagger.yml
@@ -14,7 +14,9 @@ securityDefinitions:
   apikey:
     type: apiKey
     in: header
-    name: x-token
+    name: Authorization
+security:
+  - apikey: []
 basePath: "/api/v1beta"
 consumes:
   - application/json
@@ -86,8 +88,7 @@ paths:
       description: |
         Returns health and status information of the API daemon and
         related components such as the runtime.
-      tags:
-        - health
+      security: []
       responses:
         '200':
           description: Success
